--- a/inspeccion_blister.html
+++ b/inspeccion_blister.html
@@ -173,7 +173,7 @@
                 
                 labelContainerInspector.innerHTML = "IA Lista. Presione 'Analizar'.";
                 progressBarContainerInspector.style.display = 'none';
-                setAuditorInspectorSpeech('Sistema listo. Coloque el blíster.', true, 'idle');
+                setAuditorInspectorSpeech('Sistema listo. Coloque la muestra.', true, 'idle');
                 captureButtonInspector.disabled = false;
                 captureButtonInspector.innerHTML = '<i class="fas fa-camera-retro"></i> Analizar Muestra';
                 
