--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-area="Moldeo">Moldeo <i class="fas fa-angle-down nav-arrow"></i></a>
                         <ul class="dropdown-menu">
-                            <li><a href="#">Proceso A (Próximamente)</a></li>
+                            <li><a href="validador_color.html">ColorCheck AI</a></li>
                             <li><a href="#">Proceso B (Próximamente)</a></li>
                         </ul>
                     </li>
