--- a/validador_color.html
+++ b/validador_color.html
@@ -149,7 +149,10 @@
                 "azul_corp": { nombre: "Azul Azor Corporativo", hex: "#007BFF", lab: { L: 53.39, a: 2.71, b: -58.01 } },
                 "rojo_logo": { nombre: "Rojo Azor Intenso", hex: "#D40000", lab: { L: 42.78, a: 67.63, b: 52.75 } },
                 "amarillo_resaltador": { nombre: "Amarillo Resaltador", hex: "#FFEB3B", lab: { L: 78.1, a: -29.5, b: 55.1 } },
-                "verde_producto_eco": { nombre: "Verde Eco Azor", hex: "#4CAF50", lab: { L: 60.32, a: -47.56, b: 46.99 } }
+                "verde_producto_eco": { nombre: "Verde Eco Azor", hex: "#4CAF50", lab: { L: 60.32, a: -47.56, b: 46.99 } },
+                "naranja_ferula": { nombre: "Naranja Ferula", hex: "#FA4F00", lab: { L: 59.0, a: 63.9, b: 69.6 } },
+                "verde_manzana": { nombre: "Verde Manzana", hex: "#1D6900", lab: { L: 40.5, a: -40.4, b: 45.3 } }
+
             };
 
             function rgbToHex(r, g, b) {
