--- a/validador_color.html
+++ b/validador_color.html
@@ -256,11 +256,49 @@
 
             const coloresEstandarAzor = {
                 "narana_web": { nombre: "Naranja Web", hex: "#CF2D00", lab: { L: 45.8, a: 60.8, b: 58.5 } },
-                "rojo_logo": { nombre: "Rojo Azor Intenso", hex: "#D40000", lab: { L: 42.78, a: 67.63, b: 52.75 } },
+		"3001P": { nombre: "Naranja Ferula", hex: "#FA4F00", lab: { L: 59, a: 63.9, b: 69.6 } },
+		"3001N": { nombre: "114.3001  BLANCO EN POLIPRO", hex: " #D6D3D9", lab: { L:  84.9, a: 45659, b:  -2.6 } },
+		"3002": { nombre: "114.3001  BLANCO EN NYLON", hex: " #C9C8C9", lab: { L:  80.7, a:  0.5, b:  -0.4 } },
+		"3003": { nombre: "114.3002  GRIS CLARO", hex: " #7B7E87", lab: { L:  52.8, a:  0.8, b:  -5.3 } },
+		"3005": { nombre: "114.3003  PLATA", hex: " #A5A5AA", lab: { L:  67.9, a:  1.0, b:  -2.6 } },
+		"3011P": { nombre: "114.3005  AMARILLO CANARIO", hex: " #DEBD43", lab: { L:  77.5, a:  -1.1, b:  63.2 } },
+		"3011N": { nombre: "114.3011  NEGRO", hex: " #2D2D2E", lab: { L: 45795, a:  0.2, b:  -0.6 } },
+		"3015": { nombre: "114.3012  GRIS OBSCURO", hex: " #3C3D43", lab: { L: 45925, a:  1.0, b:  -3.8 } },
+		"3020": { nombre: "114.3015  NEGRO HUMO TRANSLUCIDO (SAN)", hex: " #625B5E", lab: { L:  39.4, a: 45750, b:  -0.7 } },
+		"3022": { nombre: "114.3020  ROJO TRANSLUCIDO (SAN)", hex: " #7E252F", lab: { L: 45745, a:  38.9, b: 45823 } },
+		"3023": { nombre: "114.3022  ROJO (POLIPRO)", hex: " #B72123", lab: { L:  40.0, a:  57.7, b:  38.4 } },
+		"3025": { nombre: "114.3023  ROJO (NYLON)", hex: " #A82429", lab: { L:  37.4, a:  52.6, b: 45688 } },
+		"3029": { nombre: "114.3025  ROJO OBSCURO (POLVO)", hex: " #2696C0", lab: { L:  58.1, a:  -15.9, b:  -30.4 } },
+		"3034": { nombre: "114.3032  AZUL AQUA", hex: " #1C6B98", lab: { L:  42.8, a:  -6.9, b:  -31.0 } },
+		"3036P": { nombre: "114.3034  AZUL PASTEL CLARO", hex: " #2194C9", lab: { L:  57.8, a:  -12.1, b:  -35.9 } },
+		"3036N": { nombre: "114.3036  AZUL ULTRAMAR EN POLIPRO", hex: " #21419B", lab: { L: 45838, a: 45738, b:  -52.4 } },
+		"3039": { nombre: "114.3036  AZUL ULTRAMAR EN NYLON", hex: " #1C44AA", lab: { L:  32.4, a: 45863, b:  -58.4 } },
+		"3042": { nombre: "114.3039  VERDE FLUORESCENTE TRANSLUCIDO", hex: " #A1C29E", lab: { L:  75.2, a:  -18.0, b: 45791 } },
+		"3047": { nombre: "114.3042  VERDE FLUORESCENTE", hex: " #46AA64", lab: { L:  62.5, a:  -44.9, b: 45835 } },
+		"3050P": { nombre: "114.3047  VERDE AQUA", hex: " #B1C5C9", lab: { L:  78.2, a:  -6.0, b:  -4.3 } },
+		"3050N": { nombre: "114.3050  VERDE OBCURO (POLIPRO)", hex: " #3A5D51", lab: { L:  36.6, a:  -15.7, b: 45902 } },
+		"3052": { nombre: "114.3050  VERDE OBCURO (NYLON)", hex: " #394A51", lab: { L: 45746, a:  -4.8, b:  -6.4 } },
+		"3053N": { nombre: "114.3053  AMARILLO FLUORESCENTE (POLIPRO)", hex: " #E2EC5A", lab: { L:  90.3, a:  -21.7, b:  67.3 } },
+		"3055": { nombre: "114.3053  AMARILLO FLUORESCENTE (NYLON)", hex: " #EDE72B", lab: { L:  89.5, a:  -16.8, b:  82.4 } },
+		"3057": { nombre: "114.3055  DORADO", hex: " #95744B", lab: { L:  51.1, a: 45815, b: 45804 } },
+		"3061": { nombre: "114.3057  AMARILLO FLUORESCENTE TRANSLUCIDO", hex: " #D3C95C", lab: { L:  79.8, a:  -10.3, b:  54.7 } },
+		"3062": { nombre: "114.3061  NARANJA FLUORESCENTE", hex: " #FF5617", lab: { L:  59.9, a:  61.9, b:  65.1 } },
+		"3063": { nombre: "114.3062  NARANJA (POLIPRO)", hex: " #DB581B", lab: { L:  54.2, a:  48.7, b:  56.9 } },
+		"3065": { nombre: "114.3063  NARANJA (NYLON)", hex: " #D43A1E", lab: { L:  48.4, a:  58.6, b:  50.6 } },
+		"3066": { nombre: "114.3065  NARANJA FLUORESCENTE TRANSLUCIDO", hex: " #FB6620", lab: { L:  61.8, a:  54.0, b:  63.3 } },
+		"3068": { nombre: "114.3066  NARANJA TRANSLUCIDO (SAN)", hex: " #CE6D20", lab: { L:  56.3, a:  33.4, b:  56.0 } },
+		"3070P": { nombre: "114.3068  MORADO TRANSLUCIDO", hex: " #2B3F9E", lab: { L: 45868, a:  26.0, b:  -54.0 } },
+		"3070N": { nombre: "114.3070  CAFE CHOCOLATE (POLIPRO)", hex: " #443332", lab: { L: 45680, a: 45784, b: 45811 } },
+		"3072": { nombre: "114.3070  CAFE CHOCOLATE (NYLON)", hex: " #41383A", lab: { L: 45801, a: 45751, b:  0.2 } },
+		"3075": { nombre: "114.3072  CAFE TRANSLUCIDO (POLIPRO)", hex: " #624C55", lab: { L:  34.8, a: 45910, b:  -1.8 } },
+		"3076": { nombre: "114.3075  CAFE TRANSLUCIDO (SAN)", hex: " #5A444B", lab: { L:  31.4, a: 45848, b:  -0.6 } },
+		"3077": { nombre: "114.3076  AZUL CLARO TRANSLUCIDO (SAN)", hex: " #1A77B2", lab: { L:  47.8, a:  -4.4, b:  -38.5 } },
+		"3080": { nombre: "114.3077  AZUL (POLIPRO / TPE)", hex: " #243A88", lab: { L: 45715, a:  20.0, b:  -46.2 } },
+                "rojo_logo": { nombre: "Rojo Corty", hex: "#B11C20", lab: { L: 38.3, a: 57.1, b: 37.9 } },
                 "amarillo_resaltador": { nombre: "Amarillo Resaltador", hex: "#FFEB3B", lab: { L: 78.1, a: -29.5, b: 55.1 } },
                  "verde_producto_eco": { nombre: "Verde Eco Azor", hex: "#4CAF50", lab: { L: 60.32, a: -47.56, b: 46.99 } },
                 "naranja_ferula": { nombre: "Naranja Ferula", hex: "#FA4F00", lab: { L: 59.0, a: 63.9, b: 69.6 } },
-                "verde_manzana": { nombre: "Verde Manzana", hex: "#1D6900", lab: { L: 40.5, a: -40.4, b: 45.3 } }
+                "verde_fosfo": { nombre: "Verde Fosfo", hex: "#E5F15F", lab: { L: 91.9, a: -22.5, b: 67.1 } }
             };
 
             function rgbToHex(r, g, b) {
