--- a/validador_color.html
+++ b/validador_color.html
@@ -174,6 +174,7 @@
 
             const coloresEstandarAzor = {
 "3001P": { nombre: "114.3001 BLANCO EN POLIPRO (USAR FONDO NEGRO)", hex: "#BBBABC", lab: { L: 75.6, a: 0.7, b: -0.9 } },
+"Azul Corporativo": { nombre: "Prueba Azul corporativo", hex: "#005eb8", lab: { L: 40.35, a: 12.4, b: -53.87 } },      
 "3001N": { nombre: "114.3001 BLANCO EN NYLON (USAR FONDO NEGRO)", hex: "#C2BFBF", lab: { L: 77.6, a: 1, b: 0.4 } },
 "3002": { nombre: "114.3002 GRIS CLARO", hex: "#757781", lab: { L: 50.2, a: 1.4, b: -5.7 } },
 "3003": { nombre: "114.3003 PLATA", hex: "#959498", lab: { L: 61.5, a: 1.1, b: -2 } },
